--- a/Project1/Project1.vcxproj
+++ b/Project1/Project1.vcxproj
@@ -127,12 +127,16 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClInclude Include="CAudioEndpointVolumeCallback.h" />
     <ClInclude Include="framework.h" />
+    <ClInclude Include="MainWindow.h" />
     <ClInclude Include="Project1.h" />
     <ClInclude Include="Resource.h" />
     <ClInclude Include="targetver.h" />
   </ItemGroup>
   <ItemGroup>
+    <ClCompile Include="CAudioEndpointVolumeCallback.cpp" />
+    <ClCompile Include="MainWindow.cpp" />
     <ClCompile Include="Project1.cpp" />
   </ItemGroup>
   <ItemGroup>
